--- a/app.json
+++ b/app.json
@@ -11,6 +11,19 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "packagerOpts": { "config": "metro.config.js", "sourceExts": ["js", "jsx", "svg"] },
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./app/assets/font/Medium.ttf",
+            "./app/assets/font/Regular.ttf",
+            "./app/assets/font/SemiBold.ttf"
+          ]
+        }
+      ]
+    ],
     "ios": {
       "supportsTablet": true
     },
