feat: eject 전 밀린 커밋 다 함

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "jsEngine": "hermes",
     "name": "PiCK2024_V2_Refreshed",
     "slug": "PiCK2024_V2_Refreshed",
     "version": "1.0.0",
@@ -21,6 +22,20 @@
             "./app/assets/font/Regular.ttf",
             "./app/assets/font/SemiBold.ttf"
           ]
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "프로필 사진을 변경하거나, 버그 제보시에 사진을 올리는 데 사용됩니다."
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "flipper": false
+          }
         }
       ]
     ],
