--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
+    "expo-build-properties": "^0.12.5",
     "expo-font": "^12.0.10",
+    "expo-image-picker": "^15.0.7",
     "expo-navigation-bar": "^3.0.7",
     "expo-status-bar": "~1.12.1",
+    "mime": "^4.0.4",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.0",
