--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@sentry/react-native": "^6.1.0",
     "@tanstack/react-query": "^5.59.15",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
