--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/stack": "^6.4.1",
     "@sentry/react-native": "^6.1.0",
     "@tanstack/react-query": "^5.59.15",
-    "@types/react": "~18.2.79",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
@@ -24,7 +23,6 @@
     "expo-image-picker": "^15.0.7",
     "expo-navigation-bar": "^3.0.7",
     "expo-status-bar": "~1.12.1",
-    "mime": "^4.0.4",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.2",
@@ -37,6 +35,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.12",
+    "mime": "^4.0.4",
     "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
