--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^5",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -19,10 +19,13 @@
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "^12.0.10",
     "expo-image-picker": "^15.0.7",
     "expo-navigation-bar": "^3.0.7",
+    "expo-notifications": "^0.31.3",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.28",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.2",
