--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^5",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@gorhom/bottom-sheet": "4.6.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@sentry/react-native": "^6.1.0",
+    "@sentry/react-native": "~5.24.3",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
+    "expo-build-properties": "~0.12.5",
     "expo-font": "^12.0.10",
     "expo-image-picker": "^15.0.7",
     "expo-navigation-bar": "^3.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "3.10.1",
-    "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "typescript": "~5.3.3",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.12",
+    "@types/react": "~18.2.79",
     "mime": "^4.0.4",
     "react-native-svg-transformer": "^1.5.0"
   },
