--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "4.6.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@sentry/react-native": "~5.24.3",
+    "@sentry/react-native": "^6.1.0",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -26,11 +26,11 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.8.0",
     "typescript": "~5.3.3",
     "zustand": "^5.0.0"
   },
