--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "2.16.2",
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
