--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "2.16.2",
     "react-native-reanimated": "3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
     "react-native-svg": "15.3.0",
     "typescript": "~5.3.3",
     "zustand": "^5.0.0"
