--- a/package.json
+++ b/package.json
@@ -14,29 +14,30 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@sentry/react-native": "^6.1.0",
+    "@sentry/react-native": "~7.2.0",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~51.0.28",
-    "expo-build-properties": "~0.12.5",
-    "expo-font": "^12.0.10",
-    "expo-image-picker": "^15.0.7",
-    "expo-navigation-bar": "^3.0.7",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "2.16.2",
-    "react-native-reanimated": "3.10.1",
+    "expo": "^54.0.13",
+    "expo-build-properties": "~1.0.9",
+    "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-navigation-bar": "~5.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-svg": "15.3.0",
-    "typescript": "~5.3.3",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1",
+    "typescript": "~5.9.2",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.79",
+    "@types/react": "~19.1.10",
     "mime": "^4.0.4",
     "react-native-svg-transformer": "^1.3.0"
   },
