--- a/app.json
+++ b/app.json
@@ -53,10 +53,10 @@
     },
     "extra": {
       "eas": {
-        "projectId": "68074498-d33a-4db2-9798-b8b0d2217f97"
+        "projectId": "675ba227-d8e8-44fd-a59e-24abb4d340eb"
       }
     },
-    "owner": "1408bg",
+    "owner": "wlehgus",
     "web": {
       "favicon": "./assets/favicon.png"
     }
