chore: 수동 버전 처리

--- a/app.json
+++ b/app.json
@@ -49,7 +49,8 @@
         "backgroundColor": "#ffffff"
       },
       "googleServicesFile": "./google-services.json",
-      "package": "com.sixstandard.PICK"
+      "package": "com.sixstandard.PICK",
+      "versionCode": 21
     },
     "extra": {
       "eas": {
