--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "^54.0.13",
+    "expo": "54.0.20",
     "expo-build-properties": "~1.0.9",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
-    "expo-navigation-bar": "~5.0.8",
+    "expo-navigation-bar": "~5.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "^5.6.1",
