--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "54.0.20",
+    "expo": "54.0.21",
     "expo-build-properties": "~1.0.9",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
@@ -28,7 +28,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
     "typescript": "~5.9.2",
