--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "54.0.21",
     "expo-build-properties": "~1.0.9",
+    "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-navigation-bar": "~5.0.9",
+    "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
