--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "5.2.6",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/messaging": "^22.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "54.0.21",
+    "expo": "54.0.23",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.10",
     "expo-device": "~8.0.9",
