--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
       "backgroundColor": "#ffffff"
     },
     "plugins": [
+      "@react-native-firebase/app",
       [
         "expo-font",
         {
