--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "5.2.6",
     "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -28,6 +28,7 @@
     "expo-navigation-bar": "~5.0.9",
     "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
