--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-sse": "^1.2.1",
     "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
     "typescript": "~5.9.2",
