--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "54.0.23",
+    "expo": "~54.0.31",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.10",
     "expo-device": "~8.0.9",
@@ -32,13 +32,13 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-in-app-updates": "^0.2.2",
     "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-sse": "^1.2.1",
     "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
+    "sp-react-native-in-app-updates": "1.5.0",
     "typescript": "~5.9.2",
     "zustand": "^5.0.0"
   },
